add placeholder image for styling

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Sign-up-form</title>
 </head>
 <body>
+    <img src="/Images/Yore.png" alt="Girl in amusment park">
     <h1>
         YORE
     </h1>
