add shadow, logo, and change button colour

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <div id="leftContainer">
             <img class="card-image" src="/Images/Yore2.png" alt="Girl in amusment park">
             <div class="card-body">
+                <img class="logo" src="/Images/odin-lined.png" alt="Odin Logo">
                 <h1 class="card-heading">
                     YORE
                 </h1>
@@ -52,11 +53,11 @@
                     <div id="password">
                         <div class="textbox">
                             <label for="user_password">Password</label>
-                            <input type="password" name="user_password" id="user_password" class="textbox  input">
+                            <input type="password" name="user_password" id="user_password" class="textbox input error">
                         </div>
                         <div class="textbox">
                             <label for="user_password_confirm">Confirm Password</label>
-                            <input type="password" name="user_password_confirm" id="user_password_confirm" class="textbox  input">
+                            <input type="password" name="user_password_confirm" id="user_password_confirm" class="textbox input error">
                         </div>
                     </div>
             </div>
