add focus border and remove redundant classes

--- a/index.html
+++ b/index.html
@@ -32,22 +32,22 @@
                     <div id="firstLastName">
                         <div class="textbox">
                             <label id="name1" for="first_name">First Name</label>
-                            <input type="text" name="first_name" id="first_name" class="textbox input" required>
+                            <input type="text" name="first_name" id="first_name" class="textbox" required>
                         </div>
                         <div class="textbox">
                             <label for="last_name">Last Name</label>
-                            <input type="text" name="last_name" id="last_name" class="textbox  input" required>
+                            <input type="text" name="last_name" id="last_name" class="textbox" required>
                         </div>
                     </div>
 
                     <div id="contactInformation">
                         <div class="textbox">
                             <label for="user_email">Email Address</label>
-                            <input type="email" name="user_email" id="user_email" placeholder="you@example.com" class="textbox  input" required>
+                            <input type="email" name="user_email" id="user_email" placeholder="you@example.com" class="textbox" required>
                         </div>
                         <div class="textbox">
                             <label for="phone_number">Phone Number</label>
-                            <input type="tel" name="phone_number" id="phone_number" class="textbox  input"
+                            <input type="tel" name="phone_number" id="phone_number" class="textbox"
                             placeholder="123-456-7890"
                             pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}"
                             required>
@@ -56,11 +56,11 @@
                     <div id="password">
                         <div class="textbox">
                             <label for="user_password">Password</label>
-                            <input type="password" name="user_password" id="user_password" class="textbox input error" required>
+                            <input type="password" name="user_password" id="user_password" class="textbox" required>
                         </div>
                         <div class="textbox">
                             <label for="user_password_confirm">Confirm Password</label>
-                            <input type="password" name="user_password_confirm" id="user_password_confirm" class="textbox input error" required>
+                            <input type="password" name="user_password_confirm" id="user_password_confirm" class="textbox" required>
                         </div>
                     </div>
             </div>
