remove placeholder image and add actual image

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div id="containerAll">
         <div id="leftContainer">
-            <img class="card-image" src="/Images/Yore2.png" alt="Girl in amusment park">
+            <img class="card-image" src="/Images/bradley-pelish--yiEkPD5l3o-unsplash.jpg" alt="apocalypse">
             <div class="card-body">
                 <img class="logo" src="/Images/odin-lined.png" alt="Odin Logo">
                 <h1 class="card-heading">
