Fix resizing issues on left container image

--- a/index.html
+++ b/index.html
@@ -14,9 +14,16 @@
             <div class="card-body">
                 <img class="logo" src="/Images/odin-lined.png" alt="Odin Logo">
                 <h1 class="card-heading">
-                    YORE
+                    ODIN
                 </h1>
             </div>
+            <div class="reference">
+                <p>Image by&nbsp;</p>
+                <p class="under">Bradley Pelish</p>
+                <p>&nbsp;on&nbsp;</p>
+                <p class="under">Unsplash</p>
+            </div>
+            
 
         </div>
         <div id="rightContainer">
