fix word wrap issues and overflow on right side

--- a/index.html
+++ b/index.html
@@ -18,10 +18,7 @@
                 </h1>
             </div>
             <div class="reference">
-                <p>Image by&nbsp;</p>
-                <p class="under">Bradley Pelish</p>
-                <p>&nbsp;on&nbsp;</p>
-                <p class="under">Unsplash</p>
+                <p>Image by Bradley Pelish on Unsplash</p>
             </div>
             
 
