add link reference and remove yore2 image

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 </h1>
             </div>
             <div class="reference">
-                <p>Image by Bradley Pelish on Unsplash</p>
+                <p>Image by <a class="imageReference" href="https://unsplash.com/@bjpelish">Bradley Pelish</a> on <a class="imageReference" href="https://unsplash.com/">Unsplash</a></p>
             </div>
             
 
