add . to prevent images from not showing

--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 <body>
     <div id="containerAll">
         <div id="leftContainer">
-            <img class="card-image" src="/Images/bradley-pelish--yiEkPD5l3o-unsplash.jpg" alt="apocalypse">
+            <img class="card-image" src="./Images/bradley-pelish--yiEkPD5l3o-unsplash.jpg" alt="apocalypse">
             <div class="card-body">
-                <img class="logo" src="/Images/odin-lined.png" alt="Odin Logo">
+                <img class="logo" src="./Images/odin-lined.png" alt="Odin Logo">
                 <h1 class="card-heading">
                     ODIN
                 </h1>
