--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                             <label for="phone_number">Phone Number</label>
                             <input type="tel" name="phone_number" id="phone_number" class="textbox"
                             placeholder="123-456-7890"
-                            pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}"
+                            pattern="[0-9]{10}"
                             required>
                         </div>
                     </div>
