Fix error with custom validity and form method

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <div id="middleRightContainer">
                 <h2 class="heading">Create a new account</h2>
             
-                <form action="" method="post">
+                <form action="" method="get">
                     <div id="firstLastName">
                         <div class="textbox">
                             <label id="name1" for="first_name">First Name</label>
